--- a/html/my.html
+++ b/html/my.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="../assets/css/sl.css">
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/amazeui.js"></script>
+    <script src="../assets/js/myFirst.js"></script>
     <style>
         .sl-background-color{
             background-color: #FF3366;
@@ -198,35 +199,43 @@
 </ul>
 
 
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default "
-     id="">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
             <a href="main.html" class="">
-                <i class="am-icon-home  sl-icon-color-6D6D6D"></i>
-                <span class="am-navbar-label  sl-icon-color-6D6D6D">推荐</span>
+                <img src="../assets/images/bottomNav/首页.png" alt="">
+                <span class="am-navbar-label  sl-icon-color-6D6D6D">首页</span>
             </a>
         </li>
         <li >
             <a href="tel:18601860186" class="">
-                <i class="am-icon-tasks sl-icon-color-6D6D6D"></i>
-                <span class="am-navbar-label sl-icon-color-6D6D6D">分类</span>
+                <img src="../assets/images/bottomNav/搜索.png" alt="">
+                <span class="am-navbar-label sl-icon-color-6D6D6D">搜索</span>
             </a>
         </li>
         <li data-am-navbar-share>
             <a href="my.html" class="">
-                <i class="am-icon-search sl-icon-color-6D6D6D"></i>
-                <span class="am-navbar-label sl-icon-color-6D6D6D">发现</span>
+                <img src="../assets/images/bottomNav/购物车.png" alt="">
+                <span class="am-navbar-label sl-icon-color-6D6D6D">购物车</span>
             </a>
         </li>
         <li >
             <a href="#" class="">
                 <!--<i class="fa fa-user-o sl-icon-color-6D6D6D"></i>-->
-                <i class="am-icon-user sl-icon-color-red" aria-hidden="true"></i>
+                <img src="../assets/images/bottomNavClick/我的.png" alt="">
                 <span class="am-navbar-label sl-font-color-red">我的</span>
             </a>
         </li>
     </ul>
 </div>
 </body>
+<script>
+    //全局变量
+    var rem = new Rem();
+    
+    $(function () {
+        
+    })
+
+</script>
 </html>
