--- a/html/main.html
+++ b/html/main.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="../assets/css/sl.css">
     <script src="../assets/js/jquery.min.js"></script>
     <script src="../assets/js/amazeui.js"></script>
+    <script src="../assets/js/myFirst.js"></script>
     <style>
 
 
@@ -150,7 +151,7 @@
 <div class="am-tabs " data-am-tabs="{noSwipe: 1}">
     <ul class="am-tabs-nav am-nav am-nav-tabs">
         <li class="am-active"><a href="#tab3">热门电影</a></li>
-        <li><a href="#tab4">即将上映</a></li>
+        <li><a href="#">即将上映</a></li>
         <!--<li><a href="#tab3">更多</a></li>-->
         <div class="sl-grid-row-right">
             <a href="#" class="sl-font">更多</a>
@@ -183,7 +184,7 @@
             </div>
 
         </div>
-        <div class="am-tab-panel am-fade"  id="tab4">
+        <div class="am-tab-panel am-fade"  id="">
             <div data-am-widget="slider" class="am-slider am-slider-c3" data-am-slider='{"controlNav":false}' >
                 <ul class="am-slides">
                     <li>
@@ -215,7 +216,7 @@
 <div class="am-tabs " data-am-tabs="{noSwipe: 1}">
     <ul class="am-tabs-nav am-nav am-nav-tabs">
         <li class="am-active"><a href="#tab3">热门电影</a></li>
-        <li><a href="#tab4">即将上映</a></li>
+        <li><a href="#">即将上映</a></li>
         <!--<li><a href="#tab3">更多</a></li>-->
         <div class="sl-grid-row-right">
             <a href="#" class="sl-font">更多</a>
@@ -248,7 +249,7 @@
             </div>
 
         </div>
-        <div class="am-tab-panel am-fade"  id="tab4">
+        <div class="am-tab-panel am-fade"  id="">
             <div data-am-widget="slider" class="am-slider am-slider-c3" data-am-slider='{"controlNav":false}' >
                 <ul class="am-slides">
                     <li>
@@ -280,7 +281,7 @@
 <div class="am-tabs " data-am-tabs="{noSwipe: 1}">
     <ul class="am-tabs-nav am-nav am-nav-tabs">
         <li class="am-active"><a href="#tab3">热门电影</a></li>
-        <li><a href="#tab4">即将上映</a></li>
+        <li><a href="#">即将上映</a></li>
         <!--<li><a href="#tab3">更多</a></li>-->
         <div class="sl-grid-row-right">
             <a href="#" class="sl-font">更多</a>
@@ -313,7 +314,7 @@
             </div>
 
         </div>
-        <div class="am-tab-panel am-fade"  id="tab4">
+        <div class="am-tab-panel am-fade">
             <div data-am-widget="slider" class="am-slider am-slider-c3" data-am-slider='{"controlNav":false}' >
                 <ul class="am-slides">
                     <li>
@@ -343,15 +344,9 @@
     </div>
 </div>
 <div class="sl-flex-row-center-space-around sl-padding-15px-0px-5px-0px"  style="position: fixed;z-index: 1001;top: 80%;left: 80%;display: none" id="up">
-    <!--<div class=" sl-font-color-D1D1D1 sl-font-size-14px">-->
-        <!--<span >上海</span>-->
-        <!--<i class="am-icon-angle-down"></i>-->
-    <!--</div>-->
-    <!--<div class="sl-border-radius-1000px sl-font-size-14px sl-font-color-B8B8B8 sl-padding-2px-10px sl-background-color-F1F1F1" >-->
-        <!--<i class="am-icon-search"></i><span class="">搜索电影、演出、艺人、影院...</span>-->
-    <!--</div>-->
-    <!--<button data-am-smooth-scroll class=""><i class="am-icon-arrow-up"></i><span>顶部</span></button>-->
-   <span class="sl-flex-column-center-center sl-background-color-F1F1F1 sl-border-radius-1000px"  style="height: 30px ; width: 30px"><i class="am-icon-arrow-up sl-font-color-gray" style="padding: 0px;margin: 0px;"></i></span>
+   <div class="sl-flex-column-center-center sl-background-color-F1F1F1 "  style="height: 3rem ; width: 3rem;padding: 0.3rem;">
+       <img src="../assets/images/backTop.png" alt="" style="max-height: 100%;max-width: 100%;">
+   </div>
 </div>
 
 
@@ -361,31 +356,30 @@
 
 
 
-<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default "
-     id="bottom-nav">
+<div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
-            <a href="#" class="">
-                <i class="am-icon-home sl-icon-color-red"></i>
-                <span class="am-navbar-label sl-font-color-red">推荐</span>
+            <a href="main.html" class="">
+                <img src="../assets/images/bottomNavClick/首页.png" alt="">
+                <span class="am-navbar-label  sl-font-color-red">首页</span>
             </a>
         </li>
         <li >
-            <a href="tel:18601860186" class="">
-                <i class="am-icon-tasks sl-icon-color-6D6D6D"></i>
-                <span class="am-navbar-label sl-icon-color-6D6D6D">分类</span>
+            <a href="" class="">
+                <img src="../assets/images/bottomNav/搜索.png" alt="">
+                <span class="am-navbar-label sl-icon-color-6D6D6D">搜索</span>
             </a>
         </li>
         <li data-am-navbar-share>
-            <a href="my.html" class="">
-               <i class="am-icon-search sl-icon-color-6D6D6D"></i>
-                <span class="am-navbar-label sl-icon-color-6D6D6D">发现</span>
+            <a href="" class="">
+                <img src="../assets/images/bottomNav/购物车.png" alt="">
+                <span class="am-navbar-label sl-icon-color-6D6D6D">购物车</span>
             </a>
         </li>
         <li >
             <a href="my.html" class="">
-               <!--<i class="fa fa-user-o sl-icon-color-6D6D6D"></i>-->
-                <i class="am-icon-user sl-icon-color-6D6D6D" aria-hidden="true"></i>
+                <!--<i class="fa fa-user-o sl-icon-color-6D6D6D"></i>-->
+                <img src="../assets/images/bottomNav/我的.png" alt="">
                 <span class="am-navbar-label sl-icon-color-6D6D6D">我的</span>
             </a>
         </li>
@@ -394,12 +388,10 @@
 </body>
 </html>
 <script>
-
+    //全局变量
+    var rem = new Rem();
     
-//    $(document).ready(function () {
-//       var t= $("#slider-image").offset();
-//       console.log("T:"+t)
-//    })
+
 
 
     $("#test").click(function () {
