--- a/html/commodity.html
+++ b/html/commodity.html
@@ -44,13 +44,14 @@
             background-color: red;
             /*-webkit-border-radius: 2px;*/
             /*-moz-border-radius: 2px;*/
-            border-radius: 0.8rem;
+            /*border-radius: 0.8rem;*/
         }
 
     </style>
 
 </head>
 <body >
+<!---->
 <div class="top-div" style="width: 100%;position:fixed;top: 0px;left: 0px;z-index: 10010">
     <div class="sl-flex-row-center-space-between " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
         <a onclick="goBack()"><img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;"></a>
@@ -59,6 +60,7 @@
         <!--</div>-->
     </div>
 </div>
+<!--"-->
 <div style="margin-top: 3.2rem;">
     <div data-am-widget="tabs" class="am-tabs am-tabs-default">
         <!--<div class="sl-border-bottom-1px-solid-E6E6E6 search-div" style="background-color: #E3E3E3;padding: .5rem 1rem">-->
@@ -81,15 +83,16 @@
         </ul>
         <div class="am-tabs-bd">
             <div data-tab-panel-0 class="am-tab-panel am-active" style="padding-right: 0rem;padding-left: 0rem;">
-                        <ul class="am-avg-sm-2" style="background-color: white;">
+                        <ul class="am-avg-sm-2" style="background-color: white;" id="list">
                             <li style="padding: 0.2rem;">
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">8</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
-                                            <span style="color: red;">20</span>
+                                            <span style="color: red;">21</span>
                                             <span> &nbsp;积分</span>
                                         </div>
                                         <button >兑换</button>
@@ -100,6 +103,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">21</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -114,6 +118,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">10</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -128,6 +133,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">10</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -142,6 +148,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">40</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -156,6 +163,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">10</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -170,6 +178,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">10</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -184,6 +193,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">10</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -198,6 +208,7 @@
                                 <div style="border: 2px solid #D1D1D1;padding: 0.2rem">
                                     <img src="../assets/images/high.jpg" alt="" style="width: 100%;height: 100%;">
                                     <span class="am-text-truncate">数码相机</span><br>
+                                    <span>库存：</span><b style="color: red;">10</b>
                                     <div class="sl-flex-row-center-space-between">
                                         <div class="sl-flex-row-center-flex-start">
                                             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
@@ -232,18 +243,45 @@
     <div class="am-modal-dialog">
         <div class="am-modal-hd">请输入购买的数量</div>
         <div class="am-modal-bd sl-flex-column-center-center">
-            <div class="sl-flex-row-center-flex-start">
-                <span>你的积分&nbsp;:&nbsp;</span><b>300</b><span>&nbsp;积分</span>
-            </div>
-            <div>
-                <span>商品价格&nbsp;:&nbsp;</span><b>30</b><span>&nbsp;积分</span>
-            </div>
-            <div>
-                <span>可以购买的数量&nbsp;:&nbsp;</span><b style="color: red;">10</b><span>&nbsp;个</span>
-            </div>
-            <div class="sl-flex-row-center-space-between">
-                <span>数量:</span><input type="number" oninput="checkVal(this)" class="am-modal-prompt-input">
-            </div>
+            <table>
+                <tr>
+                    <td style="width: 40%;">您的积分</td>
+                    <td style="width: 30%;">300</td>
+                    <td style="width: 30%;">积分</td>
+                </tr>
+                <tr>
+                    <td>兑换价格</td>
+                    <td></td>
+                    <td>积分</td>
+                </tr>
+                <tr>
+                    <td>库存</td>
+                    <td style="color: red;"><b></b></td>
+                    <td>个</td>
+                </tr>
+                <tr>
+                    <td>可兑换数</td>
+                    <td style="color: red;"><b></b></td>
+                    <td>个</td>
+                </tr>
+                <tr>
+                    <td>数量</td>
+                    <td colspan="2"><input type="number" oninput="checkVal(this)" class="am-modal-prompt-input"></td>
+                </tr>
+            </table>
+            <!--<div class="sl-flex-row-center-flex-start">-->
+                <!---->
+                <!--<span>你的积分&nbsp;:&nbsp;</span><b>300</b><span>&nbsp;积分</span>-->
+            <!--</div>-->
+            <!--<div>-->
+                <!--<span>商品价格&nbsp;:&nbsp;</span><b>30</b><span>&nbsp;积分</span>-->
+            <!--</div>-->
+            <!--<div>-->
+                <!--<span>可以购买的数量&nbsp;:&nbsp;</span><b style="color: red;">10</b><span>&nbsp;个</span>-->
+            <!--</div>-->
+            <!--<div class="sl-flex-row-center-space-between">-->
+                <!--<span>数量:</span><input type="number" oninput="checkVal(this)" class="am-modal-prompt-input">-->
+            <!--</div>-->
 
         </div>
         <div class="am-modal-footer">
@@ -275,6 +313,7 @@
     //全局变量
     var rem = new Rem();
     var num = 0;
+    var numKC = 0;
     //回顶部
     $("#up").click(function () {
         $('html, body').animate({scrollTop: 0}, '500');
@@ -288,23 +327,30 @@
     //点击兑换按钮
     $(function () {
         $('button').on('click', function () {
-            var price = parseInt($(this).prev().find('span:first').html());
-           var $div = $('div.am-modal-bd').children();
-            $div.eq(1).find('b').html(price);
-            var yourJF = parseInt($div.eq(0).find('b').html());
+            var price = parseInt($(this).prev().find('span:first').html());//获取商品价格
+            numKC =  parseInt($(this).parent().prev().html());
+           var $tr = $('table tr');
+            $tr.eq(1).children('td').eq(1).html(price);//将商品价格放入到td中
+            var yourJF = parseInt($tr.eq(0).children('td').eq(1).html());//你的所有积分
             num = parseInt(yourJF / price);
-            $div.eq(2).find('b').html(num);
-            $div.eq(3).find('input').attr('max',num);
+            $tr.eq(2).children('td').eq(1).find('b').html(numKC);//你的积分可以购买的个数
+            $tr.eq(3).children('td').eq(1).find('b').html(num)//库存
+            if(num > numKC){
+                $tr.eq(4).children('td').eq(1).find('input').attr('max',numKC);
+            } else {
+                $tr.eq(4).children('td').eq(1).find('input').attr('max',num);
+            }
+
             $('#my-prompt').modal({
                 relatedTarget: this,
                 onConfirm: function(e) {
-                    var tempNum =parseInt(e.data) ;
+                    var tempNum =parseInt($.trim(e.data)) ;
                     console.log(tempNum);
 
-                    if(tempNum < 0 || tempNum > num){
-                        rem.alertInfoByState('购买失败',1)
+                    if(isNaN(tempNum)){//先判断是不是数字
+                        rem.alertInfoByState('兑换失败',1)
                     }else{
-                        rem.alertInfoByState('购买成功',0)
+                        rem.alertInfoByState('兑换成功',0)
                     }
                 },
                 onCancel: function(e) {
@@ -321,15 +367,58 @@
             flag = true;
         }
         var n = parseInt($(self).val());
-        if(isNaN(n) || n < 0  ||flag){
+        if(isNaN(n) || n <= 0  ||flag){
             $(self).val('');
             rem.alertInfoByState('请输入正整数',1)
         }
-        if( n > num ){
-            $(self).val('');
-            rem.alertInfoByState('积分不足',1)
+        if(num > numKC){
+            if( n > numKC ){
+                $(self).val('');
+                rem.alertInfoByState('库存不足',1)
+            }
+        }else{
+            if( n > num ){
+                $(self).val('');
+                rem.alertInfoByState('积分不足',1)
+            }
         }
+
     }
+
+    //点击商品列表
+    $("#list li").mousedown(function (e) {
+        var cX = e.pageX;//鼠标对象相对于文档对象的左边缘的位置
+
+        var cY = e.pageY;//鼠标对象相对于文档对象的顶部边缘的位置
+        var $b = $(this).find('button')
+        var bW = $b.outerWidth();
+        var bH = $b.outerHeight();
+        var bX = $b.offset().left;//元素对象相对于文档对象的左边缘的位置
+        var bY = $b.offset().top;//元素对象相对于文档对象的顶部边缘的位置
+
+        if(cX >= bX && cX <= bX + bW && cY >= bY && cY <= bY + bH){
+
+        }else{
+            var KC = $(this).find('b').html();
+            var price =  $(this).find('b').next().find('span:first').html();
+            var yourJF = 300;
+            console.log("P:"+price+"KC:"+KC);
+            sessionStorage.setItem('yourJF',yourJF);
+            sessionStorage.setItem('price',price);
+            sessionStorage.setItem('KC',KC);
+            location.href = 'commodityDetail.html'
+        }
+//        console.log("cx:"+cX+",cy:"+cY+',bx:'+bX+',by:'+bY+',bw:'+bW+",bh:"+bH);
+//            $(this)
+//        location.href = 'commodityDetail.html'
+    });
+//    $(document).mousedown(function (e) {
+////        $(this)
+////        location.href = 'commodityDetail.html'
+//        alert('x'+e.clientX+',y:'+e.clientY)
+//        alert('sx'+e.screenX+',sy:'+e.screenY)
+//    });
+
 
     //
     function goBack() {
