--- a/html/commodityDetail.html
+++ b/html/commodityDetail.html
@@ -46,6 +46,9 @@
             /*-moz-border-radius: 2px;*/
             border-radius: 0.8rem;
         }
+        ::-webkit-scrollbar{
+            width: 0.1rem;
+        }
 
     </style>
 
@@ -97,13 +100,13 @@
     </div>
 </div>
 <div style="width: 100%;height: 0.4rem;background: #D1D1D1;"></div>
-<div class="sl-flex-row-center-space-between" style="padding: 0.5rem 0.2rem;border-bottom: 1px solid #CACACA;">
+<div class="sl-flex-row-center-space-between" style="padding: 0.5rem 0.2rem;border-bottom: 1px solid #CACACA;" id="commodityInfo">
     <span>商品参数</span>
     <span><img src="../assets/images/省略号.png" alt="" style="width: 1rem;height: 1rem;margin-right:0.2rem;"></span>
 </div>
-<div class="sl-flex-column-center-center" style="border: 1px solid red;">
+<div class="sl-flex-column-center-center" style="width: 100%;background-color: white" id="translate">
     <div style="width: 100%;text-align: center;">商品参数</div>
-    <div style="width: 100%;">
+    <div style="width: 100%;overflow: scroll;height: 10rem;scrollbar-track-color: ">
         <div class="am-g sl-flex-row-center-flex-start" style="border-bottom: 1px solid #CACACA;">
             <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
                 产品级别
@@ -166,6 +169,22 @@
             </div>
             <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
                 全新
+            </div>
+        </div>
+        <div class="am-g sl-flex-row-center-flex-start" style="border-bottom: 1px solid #CACACA;">
+            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
+                成色
+            </div>
+            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
+                全新1
+            </div>
+        </div>
+        <div class="am-g sl-flex-row-center-flex-start" style="border-bottom: 1px solid #CACACA;">
+            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
+                成色
+            </div>
+            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
+                全新2
             </div>
         </div>
 
@@ -183,6 +202,10 @@
     <div style="background-color: red;color: white;width: 100%;text-align: center;padding: 0.3rem;">完成</div>
 </div>
 
+
+
+<!--灰色层-->
+<div id="grayTier"></div>
 
 <div id="bottomNav" style="width: 100%;" class="sl-flex-row-center-space-between">
     <div style="width: 20%;background-color: #D1D1D1" class="sl-flex-column-center-center">
@@ -228,6 +251,7 @@
     var KC = 0;
     var price= 0;
     var $needJF = $('#bottomNav').children('div').eq(0).find('span').eq(1);
+    var wH = screen.height;
 
     //底部导航栏
     $(function () {
@@ -235,7 +259,7 @@
         var lH = $('#bottomNav').children('div').eq(0).outerHeight();
         $('#bottomNav').children('div').eq(1).css('height',lH);
     });
-
+    //将列表页面上的数据移动到本页面
     $(function () {
        var yourJF = parseInt(sessionStorage.getItem('yourJF'));
        price  = parseInt(sessionStorage.getItem('price'));
@@ -247,6 +271,54 @@
        $tr.children().eq(2).children('div').eq(0).find('b').eq(1).html(KC);
        $tr.children().eq(2).children('div').eq(1).find('b').eq(0).html(canBuy);
     });
+    //将商品信息隐藏
+    $(function () {
+       $("#translate").css({
+           position: 'fixed',
+           top: wH,
+           left: 0,
+       }).css('z-index',10005)
+    });
+    //灰色一层
+    $(function () {
+        var wW = screen.width;
+        $('#grayTier').css({
+            position: 'fixed',
+            top: 0,
+            left: 0,
+            width: wW,
+            height: wH,
+            backgroundColor: '#A5A4A5',
+            zIndex: 10002,
+            display: 'none',
+            opacity: 0.5
+
+        })
+    });
+    //点击商品信息
+    $('#commodityInfo').click(function () {
+        var dH = $('#translate').outerHeight();
+        $('#grayTier').show();
+        $('#translate').animate({
+            top: wH-dH
+        },600);
+    });
+    //点击商品信息完成按钮
+    $("#translate").children('div:eq(2)').click(function () {
+       hideTied();
+    });
+    //点击灰色层隐藏
+    $('#grayTier').click(function () {
+        hideTied();
+    }) ;
+    function hideTied() {
+        $('#grayTier').hide();
+        $('#translate').animate({
+            top: wH
+        },300);
+    }
+
+
 
     //回顶部
     $("#up").click(function () {
@@ -306,7 +378,7 @@
         }
         $("#inputNum").val('');
         $("#inputNum").val(n);
-
+//        $("#inputNum").blur;
         $('#my-prompt').modal({
             relatedTarget: this,
             onConfirm: function(e) {
@@ -316,6 +388,7 @@
                     rem.alertInfoByState('购买失败',1)
                 }else{
                     rem.alertInfoByState('购买成功',0)
+                    $needJF.html(0);
                 }
             },
             onCancel: function(e) {
