--- a/html/apple.html
+++ b/html/apple.html
@@ -55,11 +55,9 @@
 </head>
 <body >
 <div class="top-div" style="width: 100%;position:fixed;top: 0px;left: 0px;z-index: 10001">
-    <div class="sl-flex-row-center-space-between " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
-        <a onclick="goBack()"><img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;"></a>
-        <!--<div class="sl-flex-row-center-flex-end"><i class="am-icon-search" style="margin-right: 0.8rem;" onclick="insertSearch()"></i>-->
-            <!--<a href="strong-big-input.html"  class="sl-margin-right-1rem sl-font-color-white"><i class="am-icon-plus"></i></a>-->
-        <!--</div>-->
+    <div class="sl-flex-row-center-flex-start " style="background-color: red;height: 3rem;padding-left: 0.8rem;">
+        <img src="../assets/images/back.png" alt="" style="width: 1.5rem;height: 1.5rem;" onclick="goBack()">
+        <div style="color: white;" class="title">商品详情</div>
     </div>
 </div>
 <div style=";margin-top: 3rem;">
@@ -72,29 +70,29 @@
     </div>
 </div>
 <div style="padding: 0.3rem;color: #AEAEAE;" id="info">
-    <div class="am-text-truncate" style="color: black;font-size: 1.2rem">智利嘎啦果6个115g以上/个</div>
+    <div class="am-text-truncate" style="color: black;">智利嘎啦果6个115g以上/个</div>
     <!--<span style="color: black;font-size: 1.2rem"> Canon/佳能 EOS 80D套机(18-135mm)中<br>高端专业数码单反相机</span>-->
     <div class="sl-flex-row-center-space-between" style="font-size: 0.8rem;">
-        <div class="sl-flex-row-center-flex-start" style="margin-left: 0.4rem;">
+        <div class="sl-flex-row-center-flex-start" style="margin-left: 0.4rem;width: 33%;text-align: left">
             <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
             <span style="color: red;font-size: 1.4rem;">10</span>
             <span> &nbsp;积分</span>
         </div>
-        <div >
+        <div class="sl-width-33percent">
             <span style="margin-right: 0.2rem;">已兑换<b>10</b><span>笔</span></span>
+        </div>
+        <div class="sl-width-33percent-align-right">
+            <span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>
         </div>
     </div>
     <div class="sl-flex-row-center-space-between" style="font-size: 0.8rem;">
-        <div style="width: 60%;" class="sl-flex-row-center-space-between" >
-            <div style="margin-left: 0.4rem;">
-                <span>您的积分: </span><b></b>
-            </div>
-            <div>
-                <span>库存: </span><b style="color: red;"></b>
-            </div>
-
+        <div style="margin-left: 0.4rem;width: 33%;text-align: left;">
+            <span>您的积分: </span><b></b>
         </div>
-        <div>
+        <div class="sl-width-33percent">
+            <span>库存: </span><b style="color: red;"></b>
+        </div>
+        <div class="sl-width-33percent-align-right">
             <span>可兑换数: </span><b style="color: red;margin-right: 0.2rem;"></b>
         </div>
     </div>
@@ -286,8 +284,9 @@
        var $tr = $('#info');
        $tr.children().eq(1).find('span').eq(0).html(price);
        $tr.children().eq(2).children('div').eq(0).find('b').eq(0).html(yourJF);
-       $tr.children().eq(2).children('div').eq(0).find('b').eq(1).html(KC);
-       $tr.children().eq(2).children('div').eq(1).find('b').eq(0).html(canBuy);
+        $tr.children('div:eq(2)').children('div:eq(1)').find('b:eq(0)').html(KC);
+//       $tr.children().eq(2).children('div').eq(0).find('b').eq(1).html(KC);
+        $tr.children('div:eq(2)').children('div:eq(2)').find('b:eq(0)').html(canBuy);
     });
     //将商品信息隐藏
     $(function () {
