--- a/html/my.html
+++ b/html/my.html
@@ -55,8 +55,8 @@
 </head>
 <body>
 <div data-am-sticky class="sl-background-color sl-background-color-height-common sl-grid-flex-row-around">
-    <i class="am-icon-gear am-icon-sm  sl-icon-size-color sl-margin-left"></i>
-    <i class="am-icon-comment-o am-icon-sm  sl-icon-size-color sl-margin-right"></i>
+    <!--<i class="am-icon-gear am-icon-sm  sl-icon-size-color sl-margin-left"></i>-->
+    <!--<i class="am-icon-comment-o am-icon-sm  sl-icon-size-color sl-margin-right"></i>-->
 </div>
 
 <!--登录成功后的现实的个人信息-->
@@ -83,36 +83,36 @@
     </div>
     <div class="am-u-sm-5 am-u-md-5 am-u-lg-5 sl-grid sl-padding-0px">
         <span>捂着嘴眼泪掉下来</span>
-        <div class="sl-background-color-yellow sl-border-radius-1000px sl-font-size-12px sl-padding-2px-5px" >
-            <i class="am-icon-graduation-cap"></i>
-            <span class="sl-font-color-gray">M1会员</span>
-            <i class="am-icon-angle-right am-icon-sm sl-font-color-gray" ></i>
-        </div>
+        <!--<div class="sl-background-color-yellow sl-border-radius-1000px sl-font-size-12px sl-padding-2px-5px" >-->
+            <!--<i class="am-icon-graduation-cap"></i>-->
+            <!--<span class="sl-font-color-gray">M1会员</span>-->
+            <!--<i class="am-icon-angle-right am-icon-sm sl-font-color-gray" ></i>-->
+        <!--</div>-->
     </div>
     <div class="am-u-sm-4 am-u-md-4 am-u-lg-4 sl-grid-row-center  sl-padding-0px ">
-        <a href="#" class="sl-font sl-font-color-white">账户管理</a>
+        <a href="#" class="sl-font sl-font-color-white">地址管理</a>
         <i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>
     </div>
 </div>
 <ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-margin-10px-10px sl-background-color-white sl-flex-row-center-center sl-padding-5px-0px">
     <li >
         <div class="sl-flex-column-center-center">
-            <div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>
-            <span class="sl-font-color-gray sl-font-size-14px">关注</span>
+            <span class="sl-font-color-gray sl-font-size-14px">积分</span>
+            <span>100</span>
         </div>
     </li>
-    <li class="sl-flex-column-center-center">
-        <div class="sl-flex-column-center-center">
-            <div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>
-            <span class="sl-font-color-gray sl-font-size-14px">影迹</span>
-        </div>
-    </li>
-    <li class="sl-flex-column-center-center">
-        <div class="sl-flex-column-center-center">
-            <div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>
-            <span class="sl-font-color-gray sl-font-size-14px">好友</span>
-        </div>
-    </li>
+    <!--<li class="sl-flex-column-center-center">-->
+        <!--<div class="sl-flex-column-center-center">-->
+            <!--<div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">影迹</span>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li class="sl-flex-column-center-center">-->
+        <!--<div class="sl-flex-column-center-center">-->
+            <!--<div class="sl-flex-row-center-center sl-border-radius-percent50 sl-padding-5px sl-border-1px-solid-D3D3D3 sl-height-30px sl-width-30px sl-margin-bottom-5px"><i class="am-icon-heart sl-icon-color-red"></i></div>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">好友</span>-->
+        <!--</div>-->
+    <!--</li>-->
 </ul>
 <ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white sl-margin-0px-10px sl-font-color-gray sl-padding-5px sl-border-bottom-1px-solid-D3D3D3">
     <li>
@@ -120,16 +120,16 @@
     </li>
     <li >
         <div class="sl-flex-row-center-flex-end sl-font-size-14px">
-            <span>查看全部</span>
+            <span>历史兑换</span>
             <i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>
         </div>
     </li>
 </ul>
-<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">
+<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white sl-margin-0px-10px">
     <li>
         <div class="sl-flex-column-center-center sl-padding-10px-0px">
            <i class="am-icon-paypal sl-icon-color-red am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">待收货</span>
+            <span class="sl-font-color-gray sl-font-size-14px">待发货</span>
         </div>
     </li>
     <li>
@@ -138,87 +138,87 @@
             <span class="sl-font-color-gray sl-font-size-14px">待收货</span>
         </div>
     </li>
-    <li>
-        <div class="sl-flex-column-center-center  sl-padding-10px-0px">
-           <i class="am-icon-heart sl-icon-color-red am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">待评价</span>
-        </div>
-    </li>
-</ul>
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
+           <!--<i class="am-icon-heart sl-icon-color-red am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">待评价</span>-->
+        <!--</div>-->
+    <!--</li>-->
+<!--</ul>-->
 
-<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white  sl-margin-10px-10px-0px-10px  sl-font-color-gray sl-padding-5px sl-border-bottom-1px-solid-D3D3D3">
-    <li>
-        <span>必备工具</span>
-    </li>
-    <li >
-        <div class="sl-flex-row-center-flex-end sl-font-size-14px">
-            <span>查看全部</span>
-            <i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>
-        </div>
-    </li>
-</ul>
-<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">
-    <li>
-        <div class="sl-flex-column-center-center sl-padding-10px-0px">
-            <i class="am-icon-map sl-icon-color-6D6D6D am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">地址管理</span>
-        </div>
-    </li>
-    <li>
-        <div class="sl-flex-column-center-center  sl-padding-10px-0px">
-            <i class="am-icon-trophy sl-icon-color-6D6D6D am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">会员中心</span>
-        </div>
-    </li>
-    <li>
-        <div class="sl-flex-column-center-center  sl-padding-10px-0px">
-            <i class="am-icon-user  sl-icon-color-6D6D6D am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">观影人</span>
-        </div>
-    </li>
-</ul>
-<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">
-    <li>
-        <div class="sl-flex-column-center-center sl-padding-10px-0px">
-            <i class="am-icon-feed sl-icon-color-6D6D6D am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">订阅</span>
-        </div>
-    </li>
-    <li>
-        <div class="sl-flex-column-center-center  sl-padding-10px-0px">
-            <i class="am-icon-heart sl-icon-color-6D6D6D am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">收藏</span>
-        </div>
-    </li>
-    <li>
-        <div class="sl-flex-column-center-center  sl-padding-10px-0px">
-            <i class="am-icon-headphones sl-icon-color-6D6D6D am-icon-sm"></i>
-            <span class="sl-font-color-gray sl-font-size-14px">在线客服</span>
-        </div>
-    </li>
-</ul>
+<!--<ul class="am-avg-sm-2 am-avg-md-2 am-avg-lg-2 sl-background-color-white  sl-margin-10px-10px-0px-10px  sl-font-color-gray sl-padding-5px sl-border-bottom-1px-solid-D3D3D3">-->
+    <!--<li>-->
+        <!--<span>必备工具</span>-->
+    <!--</li>-->
+    <!--<li >-->
+        <!--<div class="sl-flex-row-center-flex-end sl-font-size-14px">-->
+            <!--<span>查看全部</span>-->
+            <!--<i class="am-icon-angle-right am-icon-sm sl-margin-left-5px" ></i>-->
+        <!--</div>-->
+    <!--</li>-->
+<!--</ul>-->
+<!--<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">-->
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center sl-padding-10px-0px">-->
+            <!--<i class="am-icon-map sl-icon-color-6D6D6D am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">地址管理</span>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
+            <!--<i class="am-icon-trophy sl-icon-color-6D6D6D am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">会员中心</span>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
+            <!--<i class="am-icon-user  sl-icon-color-6D6D6D am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">观影人</span>-->
+        <!--</div>-->
+    <!--</li>-->
+<!--</ul>-->
+<!--<ul class="am-avg-sm-3 am-avg-md-3 am-avg-lg-3 sl-background-color-white sl-margin-0px-10px">-->
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center sl-padding-10px-0px">-->
+            <!--<i class="am-icon-feed sl-icon-color-6D6D6D am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">订阅</span>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
+            <!--<i class="am-icon-heart sl-icon-color-6D6D6D am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">收藏</span>-->
+        <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+        <!--<div class="sl-flex-column-center-center  sl-padding-10px-0px">-->
+            <!--<i class="am-icon-headphones sl-icon-color-6D6D6D am-icon-sm"></i>-->
+            <!--<span class="sl-font-color-gray sl-font-size-14px">在线客服</span>-->
+        <!--</div>-->
+    <!--</li>-->
+<!--</ul>-->
 
 
 <div data-am-widget="navbar" class="am-navbar am-cf am-navbar-default " style="border-top: 2px solid #E5E5E5;">
     <ul class=" am-navbar-nav am-cf am-avg-sm-4 ">
         <li >
-            <a href="main.html" class="">
+            <a href="commodity.html" class="">
                 <img src="../assets/images/bottomNav/首页.png" alt="">
                 <span class="am-navbar-label  sl-icon-color-6D6D6D">首页</span>
             </a>
         </li>
-        <li >
-            <a href="tel:18601860186" class="">
-                <img src="../assets/images/bottomNav/搜索.png" alt="">
-                <span class="am-navbar-label sl-icon-color-6D6D6D">搜索</span>
-            </a>
-        </li>
-        <li data-am-navbar-share>
-            <a href="my.html" class="">
-                <img src="../assets/images/bottomNav/购物车.png" alt="">
-                <span class="am-navbar-label sl-icon-color-6D6D6D">购物车</span>
-            </a>
-        </li>
+        <!--<li >-->
+            <!--<a href="tel:18601860186" class="">-->
+                <!--<img src="../assets/images/bottomNav/搜索.png" alt="">-->
+                <!--<span class="am-navbar-label sl-icon-color-6D6D6D">搜索</span>-->
+            <!--</a>-->
+        <!--</li>-->
+        <!--<li data-am-navbar-share>-->
+            <!--<a href="my.html" class="">-->
+                <!--<img src="../assets/images/bottomNav/购物车.png" alt="">-->
+                <!--<span class="am-navbar-label sl-icon-color-6D6D6D">购物车</span>-->
+            <!--</a>-->
+        <!--</li>-->
         <li >
             <a href="#" class="">
                 <!--<i class="fa fa-user-o sl-icon-color-6D6D6D"></i>-->
