--- a/html/apple.html
+++ b/html/apple.html
@@ -104,7 +104,7 @@
 </div>
 <div class="sl-flex-row-center-space-between" style="padding: 0.5rem 0.2rem;border-bottom: 1px solid #CACACA;" >
     <span>商品介绍</span>
-    <span><img src="../assets/images/省略号.png" alt="" style="width: 1rem;height: 1rem;margin-right:0.2rem;"></span>
+    <!--<span><img src="../assets/images/省略号.png" alt="" style="width: 1rem;height: 1rem;margin-right:0.2rem;"></span>-->
 </div>
 <div class="sl-flex-column-center-center" id="detailList">
     <div class="">
@@ -136,82 +136,18 @@
     <div style="width: 100%;overflow: scroll;height: 12rem">
         <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
             <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                产品级别
+                单果规格
             </div>
             <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                中级
+                115g以上/个
             </div>
         </div>
         <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
             <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                像素
+                商品状态
             </div>
             <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                2416万
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                存储介质
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                SD卡
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                成色
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                全新
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                产品级别
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                中级
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                像素
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                2416万
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                存储介质
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                SD卡
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                成色
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                全新
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                成色
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                全新1
-            </div>
-        </div>
-        <div class="am-g sl-flex-row-center-flex-start sl-margin-05rem" style="border-bottom: 1px solid #CACACA;">
-            <div class="am-u-sm-4 am-u-md-4 am-u-lg-4">
-                成色
-            </div>
-            <div class="am-u-sm-8 am-u-md-8 am-u-lg-8">
-                全新2
+                冷藏
             </div>
         </div>
     </div>
