--- a/version-1/commodity_v2.html
+++ b/version-1/commodity_v2.html
@@ -119,6 +119,118 @@
                 </div>
             </div>
         </li>
+        <li data-fruit-type="0">
+            <div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">
+                <div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">
+                    <img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
+                </div>
+                <div class="sl-border">
+                    <div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>
+                    <div class="sl-flex-row-center-space-between data-JF-KC">
+                        <div class="sl-flex-row-center-flex-start">
+                            <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
+                            <span style="color: red;">120</span>
+                            <span> &nbsp;积分</span>
+                        </div>
+                        <div>
+                            <span>库存:</span><b style="color: red;">100</b>
+                        </div>
+                    </div>
+                    <div class="sl-flex-row-center-space-between">
+                        <div style="font-size: .6rem;">
+                            <span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>
+                        </div>
+                        <div>
+                            <button class="ls-button">兑换</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li data-fruit-type="1">
+            <div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">
+                <div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">
+                    <img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">
+                </div>
+                <div class="sl-border">
+                    <div class="am-text-truncate">吉林长白山菇娘果500g</div>
+                    <div class="sl-flex-row-center-space-between data-JF-KC">
+                        <div class="sl-flex-row-center-flex-start">
+                            <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
+                            <span style="color: red;">150</span>
+                            <span> &nbsp;积分</span>
+                        </div>
+                        <div>
+                            <span>库存:</span><b style="color: red;">60</b>
+                        </div>
+                    </div>
+                    <div class="sl-flex-row-center-space-between">
+                        <div style="font-size: .6rem;">
+                            <span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>
+                        </div>
+                        <div>
+                            <button class="ls-button">兑换</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li data-fruit-type="0">
+            <div class="sl-margin-04rem-04rem-04rem-08rem sl-border-1px-solid-D3D3D3">
+                <div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">
+                    <img src="../assets/images/fruits/pg/slider/pg_2.jpg" alt="" style="width: 100%;height: 100%;">
+                </div>
+                <div class="sl-border">
+                    <div class="am-text-truncate">智利嘎啦果6个115g以上/个</div>
+                    <div class="sl-flex-row-center-space-between data-JF-KC">
+                        <div class="sl-flex-row-center-flex-start">
+                            <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
+                            <span style="color: red;">120</span>
+                            <span> &nbsp;积分</span>
+                        </div>
+                        <div>
+                            <span>库存:</span><b style="color: red;">100</b>
+                        </div>
+                    </div>
+                    <div class="sl-flex-row-center-space-between">
+                        <div style="font-size: .6rem;">
+                            <span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>
+                        </div>
+                        <div>
+                            <button class="ls-button">兑换</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li data-fruit-type="1">
+            <div class="sl-margin-04rem-08rem-04rem-04rem sl-border-1px-solid-D3D3D3">
+                <div class="sl-background-color-F6F6F6 sl-flex-row-center-center sl-padding-1rem">
+                    <img src="../assets/images/fruits/gng/slider/gng_2.jpg" alt="" style="width: 100%;height: 100%;">
+                </div>
+                <div class="sl-border">
+                    <div class="am-text-truncate">吉林长白山菇娘果500g</div>
+                    <div class="sl-flex-row-center-space-between data-JF-KC">
+                        <div class="sl-flex-row-center-flex-start">
+                            <img src="../assets/images/money.png" alt="" style="width: 1rem;height: 1rem;">
+                            <span style="color: red;">150</span>
+                            <span> &nbsp;积分</span>
+                        </div>
+                        <div>
+                            <span>库存:</span><b style="color: red;">60</b>
+                        </div>
+                    </div>
+                    <div class="sl-flex-row-center-space-between">
+                        <div style="font-size: .6rem;">
+                            <span>由</span><b style="color: #44b549;">易批购商城</b><span>提供</span>
+                        </div>
+                        <div>
+                            <button class="ls-button">兑换</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li>
     </ul>
 </div>
 <div class="am-modal am-modal-prompt" tabindex="-1" id="my-prompt">
@@ -189,13 +301,13 @@
         </div>
     </div>
 </div>
-<div class="sl-flex-column-center-center" style="width: 100%;background-color: white;" id="translate">
+<div class="sl-flex-column-center-center" style="width: 100%;background-color: white;display: none;border-top-right-radius: 0.8rem;border-top-left-radius: 0.8rem;" id="translate">
     <div style="width: 100%;text-align: center;">商品参数</div>
     <!--overflow: scroll;height: 12rem-->
     <div class="sl-flex-column-flex-start-center">
         <header class="sl-header">兑换方式：积分兑换</header>
-        <div class="am-modal-bd ">
-            <table>
+        <div class="am-modal-bd " style="width: 100%;">
+            <table style="width: 100%;">
                 <tr>
                     <td style="width: 40%;">您的积分</td>
                     <td style="width: 30%;">300</td>
@@ -292,9 +404,11 @@
 </div>
 <!--灰色层-->
 <div id="grayTier"></div>
+<!--白色层-->
+<div id="whiteTier"></div>
 <!--图片层-->
-<div style="width: 5rem;height: 5rem;background-color: red;" id="imgTier">
-    <img src="" alt="" style="width: 100%;height: 100%;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;">
+<div style="background-color: red;display: none" id="imgTier">
+    <img src="" alt="" style="width: 100%;height: 100%">
 </div>
 
 
@@ -402,35 +516,69 @@
         var bY = $b.offset().top;//元素对象相对于文档对象的顶部边缘的位置
 
         if (cX >= bX && cX <= bX + bW && cY >= bY && cY <= bY + bH) {
-            var $img = $(this).children('div:eq(0)').children('div:eq(0)').find('img');
+            $('#grayTier').show();
+//            console.log("AAAAA");
+            var $img = $(this).children('div:eq(0)').children('div:eq(0)').find('img');//原来的图片
+            var iH = $img.outerHeight();
+            var iW = $img.outerWidth();
             var s = $img.attr('src');
-            var $iT = $('#imgTier').find('img');
+            var $iT = $('#imgTier').find('img');//图片层
             $iT.attr('src', s);
-            var itH = $iT.outerHeight();
-            var itW = $iT.outerWidth();
             $("#imgTier").css({
-                position: 'fixed',
-                top: wH,
-                left: (wW - itW-itW/2),
-                zIndex: 10007,
+                width: iW/2,
+                height: iH/2,
             });
+//            $iT
+            var docuLeft = window.pageXOffset;
+            var docuTop = window.pageYOffset;
+            console.log("top:"+docuTop+",:"+docuLeft);
+            var itH = $("#imgTier").outerHeight();//包含图片的div
+            var itW = $("#imgTier").outerWidth();
+            var dH = $('#translate').outerHeight();
+            var dW = $('#translate').outerWidth();
+            var itT = $img.offset().top;
+            var itL = $img.offset().left;
+            console.log("top_1:"+itT+",:"+itL);
+//           var a = 0.5;
+            $("#imgTier").css({
+                display: 'block',
+                position: 'fixed',
+                top: itT-docuTop,
+                left: itL-docuLeft,
+                zIndex: 10007,
+                borderTopRightRadius: 5,
+
+            });
+//            $('#whiteTier').css({
+//                display: 'block',
+//                opacity: 0.5
+//            });
+            $iT.animate({
+                borderRadius: 50+'%',
+            },1000);
+            $("#imgTier").animate({
+                top: wH - (dH+itH/2),
+                left: dW-itW/2*3,
+//                boxShadow: 10 20 30 blue,
+            },1000);
 
             $("#translate").css({
                 position: 'fixed',
-                top: wH + itH / 2,
+                top: wH,
                 left: 0,
                 zIndex: 10006,
+                display: 'block',
             })
 
 
-            var dH = $('#translate').outerHeight();
-            $('#grayTier').show();
+
+
             $('#translate').animate({
                 top: wH - dH
             }, 1000);
-            $('#imgTier').animate({
-                top: wH - (dH + itH / 2)
-            }, 1000);
+//            $('#imgTier').animate({
+//                top: wH - (dH + itH / 2)
+//            }, 1000);
         } else {
             //积分信息
             var price = $(this).find('div.data-JF-KC').find('span:eq(0)').html();
@@ -462,21 +610,21 @@
 
     //将商品信息隐藏
     $(function () {
-        $("#imgTier").css({
-            position: 'fixed',
-            top: wH,
-            left: 0,
-            zIndex: 10007,
-        });
-        $("#translate").css({
-            position: 'fixed',
-            top: wH,
-            left: 0,
-            zIndex: 100005,
-        })
+//        $("#imgTier").css({
+//            position: 'fixed',
+//            top: wH,
+//            left: 0,
+//            zIndex: 10007,
+//        });
+//        $("#translate").css({
+//            position: 'fixed',
+//            top: wH,
+//            left: 0,
+//            zIndex: 100005,
+//        })
     });
 
-    //灰色一层
+    //白色一层
     $(function () {
         var wW = screen.width;
         $('#grayTier').css({
@@ -485,10 +633,10 @@
             left: 0,
             width: wW,
             height: wH,
-            backgroundColor: '#A5A4A5',
+            backgroundColor: '#D1D1D1',
             zIndex: 10002,
             display: 'none',
-            opacity: 0.5
+            opacity: 0.7
         })
     });
     //点击灰色层隐藏
